# endeavor-take-home

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ENDPOINT_TEST_REPORT.md  NOTES.md  PR_REVIEW_LEADERBOARD.md  README.md  TESTING_STRATEGY.md  pyproject.toml  test_endpoints.sh  test_leaderboard_requirements.sh
.opencode/commands/: commit.md
app/: database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
app/api/: deps.py
app/api/v1/: campaigns.py  leaderboard.py  (+7 more)
app/repositories/: __init__.py  base_repository.py  campaign_repository.py  pokemon_repository.py  ranger_repository.py  sighting_repository.py  trainer_catch_repository.py  trainer_repository.py
app/services/: __init__.py  campaign_service.py  leaderboard_service.py  pokemon_service.py  ranger_service.py  region_service.py  sighting_service.py  trainer_service.py
data/: pokedex_entries.json
docs/plans/: 2026-03-06-feat-peer-confirmation-system-plan.md  2026-03-06-feat-pokemon-rarity-encounter-rate-analysis-plan.md  2026-03-06-feat-ranger-leaderboard-plan.md  2026-03-06-feat-regional-research-summary-plan.md  2026-03-06-feat-research-campaigns-plan.md  2026-03-06-feat-sighting-filters-pagination-plan.md  2026-03-06-feat-trainer-pokedex-catch-tracking-plan.md
docs/research/: feature-6-leaderboard-research.md
scripts/: check.sh  format.sh  seed.py
tests/: conftest.py  test_campaigns.py  test_confirmation.py  test_identity.py  test_leaderboard.py  test_pokedex.py  test_public.py  test_regional_analysis.py  test_regional_summary.py  test_sighting_filters.py  test_sightings.py  test_trainer_catch_tracking.py
