[project]
name = "poketracker"
version = "0.1.0"
description = "Pokémon Research Institute - Pokédex Tracker API"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.131.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
